[package]
name = "vrf-r255"
description = "TBD"
version = "0.0.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"
categories = ["cryptography"]

[dependencies]
curve25519-dalek = "3.2"
rand_core = "0.5"
sha2 = "0.10"
subtle = "2.4"

[dev-dependencies]
criterion = "0.4"
hex = "0.4"

[[bench]]
name = "benchmarks"
harness = false
